<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingVertical="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"/>

        <EditText
            android:id="@+id/edit_login"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"/>

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surname"/>

        <EditText
            android:id="@+id/edit_surname"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/father_name"/>

        <EditText
            android:id="@+id/edit_father_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"/>

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="phone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"/>

        <EditText
            android:id="@+id/edit_address"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/change_info_button"
            android:layout_marginTop="15dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/change" />

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/edit_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>



</ScrollView>