<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/register_login_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"/>

            <EditText
                android:id="@+id/register_login_edit_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:labelFor="@id/register_login_text_view" />

            <TextView
                android:id="@+id/register_password_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"/>

            <EditText
                android:id="@+id/register_password_edit_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:labelFor="@id/register_password_text_view" />

            <TextView
                android:id="@+id/surname_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surname"/>

            <EditText
                android:id="@+id/surname_edit_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:labelFor="@id/surname_text_view" />

            <TextView
                android:id="@+id/name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:labelFor="@id/name_text_view" />

            <TextView
                android:id="@+id/father_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/father_name" />

            <EditText
                android:id="@+id/father_name_edit_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:labelFor="@id/father_name_text_view" />

            <TextView
                android:id="@+id/phone_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone" />

            <EditText
                android:id="@+id/phone_edit_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:labelFor="@id/phone_text_view" />

            <TextView
                android:id="@+id/address_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address" />

            <EditText
                android:id="@+id/address_edit_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:labelFor="@id/address_text_view" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/register" />

        </LinearLayout>




</ScrollView>
