<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/text_view_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <EditText
        android:id="@+id/login_edit_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints="Логин"
        android:labelFor="@+id/text_view_login"/>

    <TextView
        android:id="@+id/text_view_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"

        android:autofillHints="Пароль"
        android:inputType="textPassword"
        android:labelFor="@id/text_view_password" />
    <Button
        android:id="@+id/login_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/enter" />

    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/register_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/no_acc_make_register" />

</LinearLayout>