<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="20dp"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/old_password" />

        <EditText
            android:id="@+id/edit_old_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password" />

        <EditText
            android:id="@+id/edit_new_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat_password" />

        <EditText
            android:id="@+id/edit_repeat_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/accept_change_password_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:layout_marginTop="15dp"/>

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/edit_password_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>
