<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        android:paddingVertical="20dp"
        android:layout_gravity="center"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/login_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:drawableStart="@drawable/ic_baseline_assignment_ind_24"
            android:drawablePadding="5dp"
            tools:text="Логин: stenol"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/fio_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="5dp"
            tools:text="ФИО: Абдрахманов Артем Азатович"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/phone_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:drawableStart="@drawable/ic_baseline_phone_24"
            android:drawablePadding="5dp"
            tools:text="Телефон: +79951837672"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/address_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_home_24"
            android:drawablePadding="5dp"
            tools:text="Адрес: ул. Ставропольская 129, кв. 22"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/profile_sad_icon"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_baseline_sentiment_very_dissatisfied_24"
            android:contentDescription="@string/connection_error" />

        <TextView
            android:visibility="gone"
            android:layout_gravity="center"
            android:id="@+id/profile_error_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:text="@string/unable_profile_info" />

        <TextView
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:id="@+id/profile_error_description"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textAlignment="center" />

        <Button
            android:id="@+id/edit_button"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/edit"/>

        <Button
            android:id="@+id/change_password_button"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/change_password" />

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/profile_progress"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>
